--- a/src/app/eszkoz/projekt/projektegy/projekt-szamlazasirend/projekt-szamlazasirendegy/projekt-szamlazasirendegy.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-szamlazasirend/projekt-szamlazasirendegy/projekt-szamlazasirendegy.component.html
@@ -1,3 +1,26 @@
-<p>
-  projekt-szamlazasirendegy works!
-</p>
+<div class="alapkeret">
+  <h5>{{szamlazasirendservice.cim}}</h5>
+  <h6 *ngIf="szamlazasirendservice.DtoSelectedIndex !== -1">{{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].OSSZEG}} {{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].PENZNEM}} {{szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex].MEGJEGYZES}}</h6>
+  <div>
+    <nav>
+      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
+      </button>
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+      </button>
+
+      <button [disabled]="eppFrissit || szamlazasirendservice.DtoSelectedIndex === -1 || !mod"
+              (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-minus" aria-hidden="true"></i>
+      </button>
+      <button [disabled]="eppFrissit || szamlazasirendservice.DtoSelectedIndex === -1 || !mod"
+              (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-edit" aria-hidden="true"></i>
+      </button>
+    </nav>
+  </div>
+
+  <router-outlet></router-outlet>
+  <app-errormodal [cim]="szamlazasirendservice.cim"></app-errormodal>
+</div>
