--- a/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendo.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendo.component.html
@@ -32,5 +32,5 @@
     </ng-container>
     </tbody>
   </table>
-  <app-errormodal [cim]="szamlazasirendservice.cim"></app-errormodal>
+  <app-errormodal [cim]="projektteendoservice.cim"></app-errormodal>
 </div>
