--- a/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendoegy/projekt-teendo-torles/projekt-teendo-torles.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendoegy/projekt-teendo-torles/projekt-teendo-torles.component.html
@@ -1,3 +1,9 @@
-<p>
-  projekt-teendo-torles works!
-</p>
+<div class="alapkeret">
+  <h5>{{projektteendoservice.cim}} törlése</h5>
+  <p>Biztosan törölni akarja ezt a tételt?</p>
+  <div class="row no-gutters" style="margin-bottom: 10px">
+    <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" type="button" (click)="ok()">Ok</button>
+    <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+  </div>
+  <app-errormodal [cim]="projektteendoservice.cim"></app-errormodal>
+</div>
