--- a/src/app/eszkoz/projekt/projektegy/projekt-szamlazasirend/projekt-szamlazasirendegy/projekt-szamlazasirend-szerkesztes/projekt-szamlazasirend-szerkesztes.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-szamlazasirend/projekt-szamlazasirendegy/projekt-szamlazasirend-szerkesztes/projekt-szamlazasirend-szerkesztes.component.html
@@ -1,3 +1,49 @@
-<p>
-  projekt-szamlazasirend-szerkesztes works!
-</p>
+<div class="alapkeret">
+  <h5 *ngIf="szamlazasirendservice.uj">Új {{szamlazasirendservice.cim | lowercase}}</h5>
+  <h5 *ngIf="!szamlazasirendservice.uj">{{szamlazasirendservice.cim}} módosítása</h5>
+
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Összeg</div>
+      </div>
+      <div class="col-md-2">
+        <input type="number" class="form-control form-control-sm" id="osszeg"
+               required autocomplete="off"
+               [(ngModel)]="szamlazasirendservice.DtoEdited.OSSZEG" name="osszeg">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Pénznem</div>
+      </div>
+      <div class="col-md-1">
+        <input type="text" class="form-control form-control-sm" id="penznem"
+               maxlength="3" required autocomplete="off" style="background-color: aquamarine"
+               [(ngModel)]="szamlazasirendservice.DtoEdited.PENZNEM" name="penznem">
+      </div>
+      <div class="col-md-1">
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="PenznemZoom()">...</button>
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Megjegyzés</div>
+      </div>
+      <div class="col-md-6">
+        <input type="text" class="form-control form-control-sm" id="megjegyzes"
+               autocomplete="off"
+               [(ngModel)]="szamlazasirendservice.DtoEdited.MEGJEGYZES" name="megjegyzes">
+      </div>
+    </div>
+
+    <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-2"></div>
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    </div>
+  </form>
+  <router-outlet></router-outlet>
+  <app-errormodal [cim]="szamlazasirendservice.cim"></app-errormodal>
+</div>
+
