--- a/src/app/torzs/felhasznalo/felhasznalo.component.html
+++ b/src/app/torzs/felhasznalo/felhasznalo.component.html
@@ -1,14 +1,17 @@
 <div class="alapkeret">
-  <h5>{{felhasznaloservice.cim}}</h5>
+  <h5 *ngIf="!felhasznaloservice.zoom">{{felhasznaloservice.cim}}</h5>
+  <h5 *ngIf="felhasznaloservice.zoom">{{felhasznaloservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="felhasznaloservice.ekDto.szempont"
                [(minta)]="felhasznaloservice.ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && mod" (Uj)="uj()">
+               [enUj]="!eppFrissit && mod" (Uj)="uj()"
+               [visZoom]="felhasznaloservice.zoom" (StopZoom)="stopzoom()">
   </app-toolbar>
   <table class="table table-bordered table-sm table-responsive" style="border: none">
     <thead>
     <tr>
+      <th *ngIf="felhasznaloservice.zoom"></th>
       <th>Id</th>
       <th>Azonosító</th>
       <th>Név</th>
@@ -21,6 +24,8 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of felhasznaloservice.Dto; let i = index">
+      <td *ngIf="felhasznaloservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
+          (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
           (click)="setClickedRow(i)">{{item.FELHASZNALOKOD}}</td>
       <td>{{item.AZONOSITO}}</td>
