--- a/src/app/torzs/primitiv/teendo/teendo.component.html
+++ b/src/app/torzs/primitiv/teendo/teendo.component.html
@@ -1,5 +1,6 @@
 <div class="alapkeret">
-  <h5>{{teendoservice.cim}}</h5>
+  <h5 *ngIf="!teendoservice.zoom">{{teendoservice.cim}}</h5>
+  <h5 *ngIf="teendoservice.zoom">{{teendoservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="teendoservice.ekDto.szempont"
                [(minta)]="teendoservice.ekDto.minta"
@@ -17,8 +18,10 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of teendoservice.Dto; let i = index">
-      <td *ngIf="teendoservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.TEENDOKOD}}</td>
+      <td *ngIf="teendoservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
+          (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
+      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
+          (click)="setClickedRow(i)">{{item.TEENDOKOD}}</td>
       <td>{{item.TEENDO1}}</td>
     </tr>
     </tbody>
