--- a/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendoegy/projekt-teendoegy.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-teendo/projekt-teendoegy/projekt-teendoegy.component.html
@@ -18,6 +18,10 @@
               (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
+
+      <button [disabled]="eppFrissit" (click)="elvegezve()" class="btn btn-sm btn-outline-primary navgomb">
+        Elvégezve
+      </button>
     </nav>
   </div>
 
