--- a/src/app/eszkoz/projekt/projektegy/projekt-bizonylatesirat/projekt-bizonylatesirat.component.html
+++ b/src/app/eszkoz/projekt/projektegy/projekt-bizonylatesirat/projekt-bizonylatesirat.component.html
@@ -2,13 +2,13 @@
   <h5>{{projektkapcsolatservice.cim}}</h5>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="m()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="ujbizonylat()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Bizonylat
       </button>
-      <button [disabled]="eppFrissit" (click)="m()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="ujirat()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Irat
       </button>
-      <button [disabled]="eppFrissit" (click)="m()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="ujajanlat()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Ajánlat
       </button>
     </nav>
