--- a/src/app/eszkoz/irat/irategy/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/eszkoz/irat/irategy/irat-szerkesztes/irat-szerkesztes.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="col-md-2">
         <input type="date" class="form-control form-control-sm" id="keletkezett"
-               [(ngModel)]="iratservice.DtoEdited.KELETKEZETT" name="keletkezett">
+               [(ngModel)]="Keletkezett" name="keletkezett">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -39,6 +39,51 @@
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="IrattipusZoom()">...</button>
       </div>
     </div>
+
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Ügyfél</div>
+      </div>
+      <div class="col-md-4">
+        <input type="text" class="form-control form-control-sm" id="ugyfelnev"
+               maxlength="200" autocomplete="off" style="background-color: aquamarine"
+               [(ngModel)]="iratservice.DtoEdited.UGYFELNEV" name="ugyfelnev">
+      </div>
+      <div class="col-md-1">
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="UgyfelZoom()">...</button>
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-4">
+        <input type="text" class="form-control form-control-sm" id="ugyfelcim"
+               autocomplete="off" readonly="true"
+               [(ngModel)]="iratservice.DtoEdited.UGYFELCIM" name="ugyfelcim">
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Küldő</div>
+      </div>
+      <div class="col-md-4">
+        <input type="text" class="form-control form-control-sm" id="kuldo"
+               maxlength="100" autocomplete="off"
+               [(ngModel)]="iratservice.DtoEdited.KULDO" name="kuldo">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Tárgy</div>
+      </div>
+      <div class="col-md-4">
+        <input type="text" class="form-control form-control-sm" id="targy"
+               maxlength="200" autocomplete="off"
+               [(ngModel)]="iratservice.DtoEdited.TARGY" name="targy">
+      </div>
+    </div>
+
     <div class="row no-gutters" style="margin-bottom: 10px">
       <div class="col-md-2"></div>
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
