--- a/src/app/irat/irat-container/irat-container.component.html
+++ b/src/app/irat/irat-container/irat-container.component.html
@@ -1,3 +1,16 @@
-<p>
-  irat-container works!
-</p>
+<!--export enum IratContainerMode {
+  Blank = 0,
+  List = 1,
+  Egy = 2,
+  Uj = 3
+}-->
+
+<ng-container *ngIf="iratservice.ContainerMode === 1">
+  <app-irat-list></app-irat-list>
+</ng-container>
+<ng-container *ngIf="iratservice.ContainerMode === 2">
+  <app-irat-egy></app-irat-egy>
+</ng-container>
+<ng-container *ngIf="iratservice.ContainerMode === 3">
+  <app-irat-szerkesztes></app-irat-szerkesztes>
+</ng-container>
