--- a/src/app/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat-egy/irat-egy.component.html
@@ -25,6 +25,25 @@
     </nav>
   </div>
 
-  <router-outlet></router-outlet>
+<!--  export enum IratEgyMode {
+  Reszletek = 1,
+  Torles = 2,
+  Modositas = 3,
+  Dokumentum = 4
+  }-->
+
+  <ng-container *ngIf="iratservice.EgyMode === 1">
+    <app-irat-reszletek></app-irat-reszletek>
+  </ng-container>
+  <ng-container *ngIf="iratservice.EgyMode === 2">
+    <app-irat-torles></app-irat-torles>
+  </ng-container>
+  <ng-container *ngIf="iratservice.EgyMode === 3">
+    <app-irat-szerkesztes></app-irat-szerkesztes>
+  </ng-container>
+  <ng-container *ngIf="iratservice.EgyMode === 4">
+    <app-irat-dokumentum></app-irat-dokumentum>
+  </ng-container>
+
   <app-errormodal [cim]="iratservice.cim"></app-errormodal>
 </div>
