--- a/src/app/projekt/projekt/projekt-napelem/projekt-napelem.component.html
+++ b/src/app/projekt/projekt/projekt-napelem/projekt-napelem.component.html
@@ -16,6 +16,16 @@
     </div>
     <div class="row no-gutters editform-row">
       <div class="col-md-2">
+        <div class="editform-title">DC, kW</div>
+      </div>
+      <div class="col-md-2">
+        <input type="number" class="form-control form-control-sm" id="dckw"
+               [(ngModel)]="projektservice.DtoEdited.DCKW"
+               name="dckw">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
         <div class="editform-title">Napelem státusz</div>
       </div>
       <div class="col-md-4">
