--- a/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt/projekt-egy/projekt-egy.component.html
@@ -90,7 +90,7 @@
     <app-projekt-szamlazasirend></app-projekt-szamlazasirend>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 11">
-    <app-projekt-teendo></app-projekt-teendo>
+    <app-projekt-teendo-list></app-projekt-teendo-list>
   </ng-container>
 
   <app-errormodal [cim]="projektservice.cim"></app-errormodal>
