--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-list/projekt-bizonylatesirat-list.component.html
@@ -2,6 +2,9 @@
   <h5>{{projektkapcsolatservice.cim}}</h5>
   <div>
     <nav>
+      <button [disabled]="eppFrissit" (click)="kereses()" class="btn btn-sm btn-outline-primary navgomb" style="margin-right: 3px">
+        <i class="fa fa-search" aria-hidden="true"></i>
+      </button>
       <button [disabled]="eppFrissit" (click)="ujbizonylat()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Bizonylat
       </button>
