--- a/src/app/projekt/szamlazasirend/projekt-szamlazasirend-list/projekt-szamlazasirend-list.component.html
+++ b/src/app/projekt/szamlazasirend/projekt-szamlazasirend-list/projekt-szamlazasirend-list.component.html
@@ -2,8 +2,11 @@
   <h5>{{szamlazasirendservice.cim}}</h5>
   <div>
     <nav>
-      <button (click)="uj()" class="btn btn-sm btn-outline-primary navgomb">
-        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
+      <button [disabled]="eppFrissit" (click)="kereses()" class="btn btn-sm btn-outline-primary navgomb" style="margin-right: 3px">
+        <i class="fa fa-search" aria-hidden="true"></i>
+      </button>
+      <button [disabled]="eppFrissit" (click)="uj()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
     </nav>
   </div>
