--- a/src/app/projekt/szamlazasirend/projekt-szamlazasirend-egy/projekt-szamlazasirend-egy.component.html
+++ b/src/app/projekt/szamlazasirend/projekt-szamlazasirend-egy/projekt-szamlazasirend-egy.component.html
@@ -21,6 +21,20 @@
     </nav>
   </div>
 
-  <router-outlet></router-outlet>
+<!--  export enum SzamlazasirendEgyMode {
+  Reszletek = 1,
+  Torles = 2,
+  Modositas = 3
+  }-->
+  <ng-container *ngIf="szamlazasirendservice.EgyMode === 1">
+    <app-projekt-szamlazasirend-reszletek></app-projekt-szamlazasirend-reszletek>
+  </ng-container>
+  <ng-container *ngIf="szamlazasirendservice.EgyMode === 2">
+    <app-projekt-szamlazasirend-torles></app-projekt-szamlazasirend-torles>
+  </ng-container>
+  <ng-container *ngIf="szamlazasirendservice.EgyMode === 3">
+    <app-projekt-szamlazasirend-szerkesztes></app-projekt-szamlazasirend-szerkesztes>
+  </ng-container>
+
   <app-errormodal [cim]="szamlazasirendservice.cim"></app-errormodal>
 </div>
