--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujirat/projekt-bizonylatesirat-ujirat.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujirat/projekt-bizonylatesirat-ujirat.component.html
@@ -55,6 +55,18 @@
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-  <router-outlet></router-outlet>
+
+<!--  export enum BizonylatesiratSzerkesztesMode {
+  Blank = 0,
+  IrattipusZoom = 1,
+  }-->
+
+  <ng-container *ngIf="projektkapcsolatservice.SzerkesztesMode === 0">
+    <app-blank></app-blank>
+  </ng-container>
+  <ng-container *ngIf="projektkapcsolatservice.SzerkesztesMode === 1">
+    <app-irattipus-container></app-irattipus-container>
+  </ng-container>
+
   <app-errormodal [cim]="'Új irat'"></app-errormodal>
 </div>
